<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/toolbar_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/lato_bold"
            android:text="Invoice"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_reset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/img_invoice"
            android:paddingHorizontal="@dimen/_15sdp"
            android:src="@drawable/reset_icon" />

        <ImageView
            android:id="@+id/img_invoice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/img_setting"
            android:paddingHorizontal="@dimen/_15sdp"
            android:src="@drawable/invoice_icon" />

        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingHorizontal="@dimen/_15sdp"
            android:src="@drawable/ic_setting" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginVertical="@dimen/_5sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:weightSum="4">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/edit_text_box"
            android:drawableStart="@drawable/profile_icon"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:hint="@string/customer_name"
            android:paddingHorizontal="10dp"
            android:paddingVertical="@dimen/_8sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/edit_text"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="30-Mar-25"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_customer"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:weightSum="10">

        <TextView
            android:id="@+id/indexTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato_regular"
            android:text="1."
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/itemNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:hint="@string/item_name"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/edit_text"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/quantityInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:hint="@string/quantity"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/edit_text"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/rateInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:hint="@string/rate"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/edit_text"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tv_total_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="0.00"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>

    <TextView
        android:id="@+id/addItemButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_add_item"
        android:background="?attr/colorPrimary"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:paddingVertical="@dimen/_8sdp"
        android:text="Add to List"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_save_share"
        android:layout_below="@id/addItemButton"
        android:paddingVertical="@dimen/_10sdp">

        <LinearLayout
            android:id="@+id/ll_capture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rel_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/tv_print_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e6e6e6"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_bold"
                    android:text="No."
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/itemNameTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/_3sdp"
                    android:text="Items"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="end|center_vertical"
                    android:paddingEnd="@dimen/_3sdp"
                    android:text="Qty"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="end|center_vertical"
                    android:paddingEnd="@dimen/_3sdp"
                    android:text="@string/rate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.6"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="end|center_vertical"
                    android:paddingEnd="@dimen/_3sdp"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/ll_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/edt_border" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:fontFamily="@font/lato_bold"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.2"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/sum_qty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="end|center_vertical"
                        android:paddingEnd="@dimen/_3sdp"
                        android:text="0 Pcs"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/tv_sum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.4"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="end"
                        android:paddingEnd="@dimen/_3sdp"
                        android:text="0.00"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/ll_bottom_final"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="@font/lato_bold"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="center_vertical"
                        android:text="@string/total"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />


                    <TextView
                        android:id="@+id/tv_final_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6.5"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="end"
                        android:paddingEnd="@dimen/_3sdp"
                        android:text="0.00"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_save_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_box"
            android:fontFamily="@font/lato_bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/save"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_box"
            android:backgroundTint="?attr/colorPrimary"
            android:fontFamily="@font/lato_bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <include
        android:id="@+id/activate"
        layout="@layout/activation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />
</RelativeLayout>